--- a/app/views/constant/_topbar.html.erb
+++ b/app/views/constant/_topbar.html.erb
@@ -10,11 +10,13 @@
 
 header {
 	height:50px;
-    background:#F0F0F0;
-    border:1px solid #CCC;
-    width:960px auto;
-    margin:0px auto;
+  background:#F0F0F0;
+  border:10px solid #CCC;
+  width:100%;
+  margin:100px;
 }
 </style>
+
+<div>
 <header>Meet My ClassMates a!!!!! </header>
-<%= redirect_to "MeetMyClassMates", root, :method => :delete %>
+</div>
