--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% if current_user %>
-	<div> Welcome <%= current_user.username %></div>
+	<%= render 'constant/banner' %>
+	<div> Welcome <%= current_user.email %></div>
 <% else %>
 	<div> Hello </div>
 <% end %>
