--- a/app/views/constant/_banner.html.erb
+++ b/app/views/constant/_banner.html.erb
@@ -103,6 +103,7 @@ $(document).ready(function() {
             url: "<%= add_course_path %>",
             data: { "q": suggestion.value },
             success: function(data) {
+                window.alert("hahahah")
                 console.log(data);
                 window.location.reload();
             }
