--- a/app/assets/stylesheets/constant_view.css.scss
+++ b/app/assets/stylesheets/constant_view.css.scss
@@ -1,27 +1,51 @@
 #main {
-  padding: 0px 0px 0px 13em;
+  padding: 50px 0px 0px 13em;
 }
 
-#sidebar {
-  position: absolute;
+#top-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #333;
+  color: white;
+}
+
+#top-bar li {
+  display: inline;
+  color: white;
+}
+
+#site-title {
+  float: left;
+}
+#username {
+  float: right;
+}
+
+#side-bar {
+  position: fixed;
   width: 13em;
   height: 100%;
-  top: 0;
+  top: 50px;
   left: 0;
   background: #333;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-#sidebar li {
-  margin: 0;
+
+#side-bar li {
+  // Remove this once other sidebar items are links
+  color: white;
+  margin: 0px 0px 0px 5px;
   padding: 0;
   list-style: none;
 }
-#sidebar a {
+#side-bar a {
+  color: white;
   background: #333;
-  border-bottom: 1px solid #393939;
-  color: #ccc;
   display: block;
   margin: 0;
   padding: 8px 4px;
@@ -29,9 +53,8 @@
   font-weight: normal;
 }
 
-#sidebar a:hover {
-  background: #2580a2;
-  color: #fff;
+#side-bar a:hover {
+  color: #2580a2;
 }
 
 .title {
@@ -40,4 +63,5 @@
 
 .sub-title {
   font-size: 15px;
+  text-indent: 10px;
 }
