--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-  <%= render :partial => 'layouts/sidebar' %>
+  <%= render :partial => 'layouts/constant' %>
 <div id="main">
 <%= yield %>
 </div>
