[#81250838] Added tests for constant view

--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -1,6 +1,6 @@
 <div id="top-bar">
   <p id="site-title">MeetMyClassmates</p>
-  <p id="username">Username</p>
+  <p id="username"><%= current_user.email %></p>
 </div>
 
 <ul id="side-bar">
