studygroup form created that adds to calendar but not model database

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,5 +29,7 @@
     //$('.calendar').fullCalendar(full_calendar_options);
     //console.log(full_calendar_options);
 
-
 </script>
+
+
+<%= link_to 'Create', studygroups_new_url %>
