Modified show page and cleaned some code

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,13 @@
-<% if current_user %>
-	<%= render 'constant/banner' %>
-	<div> Welcome <%= current_user.email %></div>
+<div> Welcome <%= current_user.email %></div>
+<%= render 'constant/banner' %>
+
+<h3>Currently enrolled courses</h3>
+<% if current_user.courses.empty? %>
+  <p>Currently in no enrolled classes!</p>
 <% else %>
-	<div> Hello </div>
+  <ul>
+    <% current_user.courses.each do |course| %>
+      <li><%= course.title %></li>
+    <% end %>
+  </ul>
 <% end %>
