--- a/app/views/constant/_banner.html.erb
+++ b/app/views/constant/_banner.html.erb
@@ -1,58 +1,8 @@
-<style>
-body {
-    background-color: linen;
-}
-h1 {
-    color: maroon;
-    margin-left: 40px;
-} 
-#main_wrap { 
-    display: table;
-}
-
-#sidebar {
-    background:red;
-    min-width: 200px;
-    display: table-cell;
-    float: left;
-}
-.left {
-    position:absolute;
-    left:0; bottom: 1000;
-    width: 178px;
-    height: 100%;
-    background: red;
-}
-#content {
-    background:blue;
-    display: table-cell;
-    width: 100%;
-}
-header {
-	height:50px;
-    background:#F0F0F0;
-    border:1px solid #CCC;
-    width:960px auto;
-    margin:0px auto;
-}
-</style>
-<div class="left">
-    LEFT
-</div>
-<h1><center>Enrolled Classes:</center>
-<center>~~~~~~~~~~</center>
-<center>~~~~~~~~~~</center>
-<center>~~~~~~~~~~</center>
-<center>~~~~~~~~~~</center>
-<center><%= button_to "Sign out", destroy_user_session_path, :method => :delete %><center>
-</h1>
-
-<center><div id="the-basics">
+<div id="the-basics">
   <input class="typeahead" type="text" placeholder="What Course?">
-<center></div>
+</div>
 
 <script>
-
 $(document).ready(function() {
     var substringMatcher = function(strs) {
       return function findMatches(q, cb) {
@@ -110,3 +60,5 @@ $(document).ready(function() {
 });
 
 </script>
+
+<%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
