--- a/app/views/constant/_banner.html.erb
+++ b/app/views/constant/_banner.html.erb
@@ -52,8 +52,9 @@ $(document).ready(function() {
             url: "<%= enroll_course_path %>",
             data: { "course": suggestion.value },
             success: function(data) {
-                console.log(data);
-                window.alert("hahahah")
+                //console.log(data);
+                // window.alert("success to enroll")
+                window.location.reload()
             }
         });
     })
@@ -61,4 +62,3 @@ $(document).ready(function() {
 
 </script>
 
-<%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
