--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,11 @@
 <% else %>
   <ul>
     <% current_user.courses.each do |course| %>
-      <li><%= course.title %></li>
+      <li>
+      	<%= course.title %>
+      	<%= button_to("Delete class", {:controller => "users", :action => "unenroll_course", course: course.title}) %>
+  	  </li>
     <% end %>
   </ul>
 <% end %>
+<center id="signUp"><%= button_to "Sign out", destroy_user_session_path, :method => :delete %></center>
