unenroll front-end fixed

--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -16,6 +16,11 @@
         <%= date_field_tag :date %>
       </div>
 
+      <div class="field">
+        <%= label_tag :course %><br>
+        <%= text_field_tag :course %>
+      </div>
+
       <div class="actions">
         <%= submit_tag 'Add' %>
       </div>
