devise try send real email

--- a/app/assets/stylesheets/constant_view.css.scss
+++ b/app/assets/stylesheets/constant_view.css.scss
@@ -25,6 +25,11 @@
   margin-right: 10px;
 }
 
+#signout{
+  float: right;
+  margin-right: 10px;
+}
+
 #side-bar {
   position: fixed;
   width: 13em;
