--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,9 @@
     <% current_user.courses.each do |course| %>
       <li>
       	<%= course.title %>
-      	<%= button_to("Delete class", {:controller => "users", :action => "unenroll_course", course: course.title}) %>
+      	<%= button_to('Unenroll from course', {action: :unenroll_course, course_name: course.title}, data: { confirm: 'Are you sure?' }) %>
   	  </li>
     <% end %>
   </ul>
 <% end %>
-<center id="signUp"><%= button_to "Sign out", destroy_user_session_path, :method => :delete %></center>
+<center id="signUp"><%= button_to "Sign out", destroy_user_session_path, method: :delete %></center>
