front end login & add

--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -1,6 +1,4 @@
-#app/views/confirmations/show.html.erb
 <h2>Account Activation</h2>
-
 <%= form_for resource, :as => resource_name, :url => update_user_confirmation_path, :html => {:method => 'patch'}, :id => 'activation-form' do |f| %>
 
   <%= devise_error_messages! %>
@@ -15,3 +13,22 @@
   <p><%= f.submit "Activate" %></p>
   </fieldset>
 <% end %>
+
+<style>
+  html{
+    height: 100%;
+  }
+  body{
+    background-image: url('/assets/cal.jpg');
+    background-repeat:no-repeat;
+    /* custom background-position */
+    background-position:50% 50%;
+    /* ie8- graceful degradation */
+    background-position:50% 50%9 !important;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+</style>
