--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-  <%= render :partial => 'layouts/constant' %>
-
+  <!-- need to be fixed -->
+  <% if params[:controller] != 'confirmations'%>
+    <%= render :partial => 'layouts/constant' %>
+  <% end%>
   <div id="main">
     <%= yield %>
   </div>
