--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body>
+<body id="deviseLogin">
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
