--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,4 +14,4 @@
     <% end %>
   </ul>
 <% end %>
-<center id="signUp"><%= button_to "Sign out", destroy_user_session_path, :method => :delete %></center>
+<!-- <center id="signUp"><%= button_to "Sign out", destroy_user_session_path, :method => :delete %></center> -->
