--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -6,21 +6,16 @@
     </div>
   <% end %>
 </div> -->
-<div id= "top-bar">
+<!-- <div id= "top-bar">
 
-</div>
+</div> -->
 <div id='cssmenu'>
 <ul>
   <li><a href='#'><span>MeetMyClassMates</span></a></li>
   <li class='active has-sub' id='setting'><a href='#'><span><%= current_user.email %></span></a>
     <ul>
-      <li class='last' id="topRight"><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></a>
-      <!-- <li class='has-sub'><a href='#'><span>Product 2</span></a>
-        <ul>
-          <li><a href='#'><span>Sub Product</span></a></li>
-          <li class='last'><a href='#'><span>Sub Product</span></a></li>
-        </ul>
-      </li> -->
+      <li class='last' id ="topRight"><%= link_to 'User Page', user_show_path(current_user) %></li>
+      <li class='last' id="topRight"><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
     </ul>
   </li>
   <li class='active has-sub' id='setting'><a href='#'><span>Contact</span></a>
