--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -19,11 +19,11 @@
     </ul>
   </li>
   <li class='active has-sub' id='setting'><a href='#'><span>Contact</span></a>
-    <ul>
-      <li class='last'><a href='#'><span>Alice Wang</span></a>
-      <li class='last'><a href='#'><span>Art Siriwatt</span></a>
-      <li class='last'><a href='#'><span>Deepak Kumar</span></a>
-      <li class='last'><a href='#'><span>Lawrence Supian</span></a>
+    <ul style="z-index: 10000">
+      <li class='last'><a href='#'><span>Alice Wang</span></a></li>
+      <li class='last'><a href='#'><span>Art Siriwatt</span></a></li>
+      <li class='last' style="z-index: 10000"><a href='#'><span>Deepak Kumar</span></a></li>
+      <li class='last' style="z-index: 10000"><a href='#'><span>Lawrence Supian</span></a></li>
     </ul>
   </li>
 </ul>
