--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@ Welcome/index<br>
     calendar_options = {
         defaultView: "agendaWeek",
         dragOpacity: 0.5,
-        editable: true,
+        editable: false,
         slotMinutes: 15,
         timeFormat: "h:mm t{ - h:mm t}",
         height: 500,
@@ -30,7 +30,7 @@ Welcome/index<br>
     $('.calendar').fullCalendar(calendar_options);
 
     //$('.calendar').fullCalendar(full_calendar_options);
-    //console.log(full_calendar_options);
+    console.log(full_calendar_options);
 
 </script>
 
