--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
-  <!-- need to be fixed -->
+  <!-- Don't delete for debugging purpose -->
+<!--   <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p> -->
     <%= render :partial => 'layouts/constant' %>
   <div id="main">
     <%= yield %>
