--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -10,10 +10,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body id="deviseLogin">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
+<body id="devise_login">
+<!-- don't delete for debugging for purpose-->
+<!--   <p class="notice"><%= notice %></p> -->
+<!--   <p class="alert"><%= alert %></p> -->
   <%= yield %>
 </body>
 </html>
