some form validation on create studygroup

--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -1,132 +1,166 @@
+<%= form_tag('add', onsubmit: "return validateForm()") do %>
+    <div class="field">
+      <%= label_tag "Study Group Name" %><br>
+      <%= text_field_tag :groupname %>
+    </div>
 
-
-  <%= form_tag 'add' do %>
-      <div class="field">
-        <%= label_tag "Group Name" %><br>
-        <%= text_field_tag :groupname %>
+    <div class="field">
+      <%= label_tag :private %><br>
+      <input type="checkbox" id="private" name="private" value="1"/>
+      <div id="emaillist" style="display:none">
+        <%= label_tag "Member Emails" %><br>
+        <%= text_field_tag :memberemails %>
       </div>
 
-      <div class="field">
-        <%= label_tag :private %><br>
-        <input id="private" name="private" type="checkbox" value="1" />
-      </div>
+      <script>
+          $('#private').click(function() {
+              $("#emaillist").toggle(this.checked);
+          });
+      </script>
+    </div>
 
-      <div class="field">
-        <%= label_tag "Start Time" %><br>
-        <select name="hours">
-          <option>1
-          <option>2
-          <option>3
-          <option>4
-          <option>5
-          <option>6
-          <option>7
-          <option>8
-          <option>9
-          <option>10
-          <option>11
-          <option>12
-        </select>
-        :
-        <select name="minutes">
-          <option>00
-          <option>30
-        </select>
-        <select name="time_tag">
-          <option>A.M.
-          <option>P.M.
-        </select>
-      </div>
+    <div class="field">
+      <%= label_tag "Start Time" %><br>
+      <select name="start_hours">
+        <option>1
+        <option>2
+        <option>3
+        <option>4
+        <option>5
+        <option>6
+        <option>7
+        <option>8
+        <option>9
+        <option>10
+        <option>11
+        <option>12
+      </select>
+      :
+      <select name="start_minutes">
+        <option>00
+        <option>30
+      </select>
+      <select name="start_time_tag">
+        <option>A.M.
+        <option>P.M.
+      </select>
+    </div>
+
+    <div class="field">
+      <%= label_tag "End Time" %><br>
+      <select name="end_hours">
+        <option>1
+        <option>2
+        <option>3
+        <option>4
+        <option>5
+        <option>6
+        <option>7
+        <option>8
+        <option>9
+        <option>10
+        <option>11
+        <option>12
+      </select>
+      :
+      <select name="end_minutes">
+        <option>00
+        <option>30
+      </select>
+      <select name="end_time_tag">
+        <option>A.M.
+        <option>P.M.
+      </select>
+    </div>
+
+    <div class="field">
+      <%= label_tag :date %><br>
+      <%= date_field_tag :date %>
+    </div>
+
+    <div class="field">
+      <%= label_tag :location %><br>
+      <%= text_field_tag :location %>
+    </div>
+
+    <div class="field">
+      <%= label_tag :MinSize %><br>
+      <input id="minsize" name="minsize" min="1" max="6" type="number" />
+    </div>
+
+    <div class="field">
+      <%= label_tag :MaxSize %><br>
+      <input id="maxsize" name="maxsize" min="1" max="6" type="number" />
+    </div>
 
 
 
+    <div id="the-basics">
+      <%= label_tag :course %><br>
+      <input class="typeahead" type="text" name="course" placeholder="What Course?" field_tag=":course">
+      <script>
+          $(document).ready(function() {
+              var substringMatcher = function(strs) {
+                  return function findMatches(q, cb) {
+                      var matches, substrRegex;
+                      // an array that will be populated with substring matches
+                      matches = [];
 
-      <div class="field">
-        <%= label_tag :date %><br>
-        <%= date_field_tag :date %>
-      </div>
+                      // regex used to determine if a string contains the substring `q`
+                      substrRegex = new RegExp(q, 'i');
 
-      <div class="field">
-        <%= label_tag :location %><br>
-        <%= text_field_tag :location %>
-      </div>
+                      // iterate through the pool of strings and for any string that
+                      // contains the substring `q`, add it to the `matches` array
+                      $.each(strs, function(i, str) {
+                          if (substrRegex.test(str)) {
+                              // the typeahead jQuery plugin expects suggestions to a
+                              // JavaScript object, refer to typeahead docs for more info
+                              matches.push({ value: str });
+                          }
+                      });
+                      cb(matches);
+                  };
+              };
+              var states = ['cs61a', 'cs61b', 'cs61c', 'cs70', 'cs149',
+                  'cs150', 'cs160', 'cs161', 'cs162', 'cs164', 'cs168',
+                  'cs170', 'cs184', 'cs186'
+              ];
+              //alert(current_user.courses);
+              //alert("Test");
+              //print(current_user.courses);
+              //print("********************************************************************************************************************************************************");
 
-      <div class="field">
-        <%= label_tag :MinSize %><br>
-        <input id="minsize" name="minsize" min="1" max="6" type="number" />
-      </div>
+              $('#the-basics .typeahead').typeahead({
+                          hint: true,
+                          highlight: true,
+                          minLength: 1
+                      },
+                      {
+                          name: 'states',
+                          displayKey: 'value',
+                          source: substringMatcher(states)
+                      });
+          });
+      </script>
+    </div>
 
-      <div class="field">
-        <%= label_tag :MaxSize %><br>
-        <input id="maxsize" name="maxsize" min="1" max="6" type="number" />
-      </div>
+    <div class="field">
+      <%= label_tag "Tags(Separated by spaces)" %><br>
+      <%= text_field_tag :tags %>
+    </div>
 
-      <div class="field">
-        <%= label_tag "Tags(Separated by spaces)" %><br>
-        <%= text_field_tag :tags %>
-      </div>
+    <div class="actions">
+      <input name="commit" type="submit" value="Create" onclick="validateForm()"/>
+    </div>
 
-
-      <div id="the-basics">
-        <%= label_tag :course %><br>
-        <input class="typeahead" type="text" name="course" placeholder="What Course?" field_tag=":course">
-      </div>
-
-      <div class="actions">
-        <%= submit_tag 'Add' %>
-      </div>
-  <% end %>
+<% end %>
 
 
 <%= link_to 'Back', welcome_index_url %>
 
-
-
-  <script>
-      $(document).ready(function() {
-          var substringMatcher = function(strs) {
-              return function findMatches(q, cb) {
-                  var matches, substrRegex;
-
-                  // an array that will be populated with substring matches
-                  matches = [];
-
-                  // regex used to determine if a string contains the substring `q`
-                  substrRegex = new RegExp(q, 'i');
-
-                  // iterate through the pool of strings and for any string that
-                  // contains the substring `q`, add it to the `matches` array
-                  $.each(strs, function(i, str) {
-                      if (substrRegex.test(str)) {
-                          // the typeahead jQuery plugin expects suggestions to a
-                          // JavaScript object, refer to typeahead docs for more info
-                          matches.push({ value: str });
-                      }
-                  });
-
-                  cb(matches);
-              };
-          };
-
-          var states = ['cs61a', 'cs61b', 'cs61c', 'cs70', 'cs149',
-              'cs150', 'cs160', 'cs161', 'cs162', 'cs164', 'cs168',
-              'cs170', 'cs184', 'cs186'
-          ];
-          //alert(current_user.courses);
-          //alert("Test");
-          //print(current_user.courses);
-          //print("********************************************************************************************************************************************************");
-
-          $('#the-basics .typeahead').typeahead({
-                      hint: true,
-                      highlight: true,
-                      minLength: 1
-                  },
-                  {
-                      name: 'states',
-                      displayKey: 'value',
-                      source: substringMatcher(states)
-                  });
-      });
-
-  </script>
+<script>
+    function validateForm() {
+        alert("hello");
+        return true;
+    }
+</script>
